# gravity

./: .gitignore  CMakeLists.txt  CMakePresets.json  debug.sh  run.sh
include/: simulation.h  vector2.h
lib/: simulation.cpp  window.cpp
shader/: fragment.glsl  vertex.glsl
src/: main.cpp  simulation.cpp  vector2.cpp
